--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -896,7 +896,8 @@ a[data-link-icon-type*='svg'] .link-icon-hook::after {
 	background-color: var(--GW-wikipedia-image-background-color);
 }
 </style>
-<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685837986">
-<script src="/static/js/head.js?v=1685837986"></script>
-<link rel="preload" href="/static/css/style.css?v=1685837986" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
-<link rel="preload" href="/static/js/script.js?v=1685837986" as="script" onload="">
+<link id="initial-styles" rel="stylesheet" type="text/css" href="/static/css/head.css?v=1685856608">
+<script src="/static/js/head.js?v=1685857159"></script>
+<link rel="preload" href="/static/img/icon/icons.svg?v=1685857159" as="image">
+<link rel="preload" href="/static/css/style.css?v=1685856608" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/js/script.js?v=1685857159" as="script" onload="">
