--- a/include/inlined-head.html
+++ b/include/inlined-head.html
@@ -3678,6 +3678,8 @@ ReaderMode = {
                 "#page-metadata #page-importance",
                 "#page-metadata .backlinks",
                 "#page-metadata .link-bibliography",
+                "#page-metadata .similars",
+                "#page-metadata #page-date-range::after",
                 "#TOC ul li::before",
                 "#footer",
                 "#footer-logo",
@@ -3905,3 +3907,4 @@ doWhenBodyExists(ReaderMode.setMode);
 <link rel="preload" href="/static/css/fonts.css?v=1682217271" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/default.css?v=1685470377" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
 <link rel="preload" href="/static/css/links.css?v=1684442854" as="style" onload="this.onload = null; this.rel = 'stylesheet'">
+<link rel="preload" href="/static/img/icon/icons.svg" as="image">
