--- a/template/inlined-asset-links-template.html
+++ b/template/inlined-asset-links-template.html
@@ -1,5 +1,6 @@
     <!-- Load the rest of the CSS. Note that we do not need any JS hacks here: HTML allows <link> stylesheets in the body: https://html.spec.whatwg.org/multipage/links.html#body-ok https://jakearchibald.com/2016/link-in-body/ -->
-	<noscript><link rel="stylesheet" type="text/css" href="/static/css/style.css?v=1685938551"></noscript>
+	<link rel="stylesheet" type="text/css" href="/static/css/style.css">
 
 	<!-- Load the rest of the JS. -->
-    <script src="/static/js/script.js?v=1685938917" defer></script>
+    <script src="/static/js/script.js" defer></script>
+    
