--- a/template/default.html
+++ b/template/default.html
@@ -149,20 +149,24 @@
         </nav>
 
         <div class="markdownBody" id="footer">
-          <p><a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback-footer">[&hairsp;Send Anonymous Feedback&hairsp;]</a></p>
-          <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
+          <p class="anonymous-feedback">
+            <a href="https://docs.google.com/forms/d/e/1FAIpQLSd7uqL7B_l1HFIfXc8D_nZyumaOv58msK7jhl4XzQjWODWKdA/viewform" title="Google Docs web form for submitting anonymized feedback to Gwern Branwen" class="icon-not" id="anonymous-feedback-link">[&hairsp;Send Anonymous Feedback&hairsp;]</a>
+          </p>
 
-          <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
+		  <div id="x-of-the-day">
+            <a class="include include-spinner-not icon-not" href="/metadata/today-quote.html">[Quote Of The Day]</a>
 
-          <a class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
-        </div>
+        	<a class="include include-spinner-not icon-not" href="/metadata/today-site.html">[Site Of The Day]</a>
 
-        <!-- NOTE: need to re-enable .markdownBody so the annotation gets fully-styled/enabled, while being centered & full-sized (rather than squashed in a column). -->
-        <div id="aotd" class="markdownBody">
-          <p><a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a></p>
+        	<a class="include include-spinner-not icon-not" href="/metadata/today-annotation.html">[Annotation Of The Day]</a>
+          </div>
         </div>
 
       </article>
+
+      <div id="footer-logo-container">
+        <a rel="home me contents" title="Gwern.net homepage" id="footer-logo" href="/index">​</a>
+      </div>
     </main>
 
     <!-- 2×2 A/B test of indentation vs newline, and justified vs not  -->
